<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App name and Titles -->
    <string name="app_name">Ancient City App</string>
    <string name="title_activity_places">Places</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_parking">Parking Map</string>
    <string name="title_activity_places_detail">Details</string>
    <string name="dialog_parking_title">Parking Menu</string>
    <string name="parking_layers_title">Types of Parking</string>
    <string name="parking_directions_title">Directions to Parking</string>
    <string name="pager_title_details">Details</string>
    <string name="pager_title_map">Map</string>

    <!-- List Item Text -->
    <string name="list_text_fb">Food &amp; Beverage</string>
    <string name="list_text_bar">Bars</string>
    <string name="list_text_lodging">Lodging</string>
    <string name="list_text_attractions">Attractions</string>
    <string name="list_text_map">Map</string>
    <string name="list_text_events">Events</string>
    <string name="list_text_parking">Parking</string>
    <string name="list_text_weather">Weather</string>

    <!-- Intent Keys -->
    <string name="key_term">key_term</string>
    <string name="key_filters">key_filters</string>
    <string name="key_fragment_titles">Fragment Titles</string>
    <string name="key_activity_title">Activity Title</string>
    <string name="key_business_id">Business Id</string>

    <!-- Content Descriptions -->
    <string name="cd_place_image">Place Image</string>

    <!-- Place Holders -->
    <string name="ph_place_name">Name</string>
    <string name="ph_place_phone">Phone Number</string>
    <string name="ph_place_hours">Hours</string>
    <string name="ph_place_address">Address</string>

    <!-- Menu Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_map">Show on Map</string>
    <string name="action_call">Call</string>

    <!-- Permission Rationales -->
    <string name="permissions_location_rationale">Please consider allowing permission to your lastKnown to fully experience the app.</string>

    <!-- Checkboxes -->
    <string name="checkbox_street_parking">Street Parking</string>
    <string name="checkbox_parking_lots">Parking Lots</string>
    <string name="checkbox_free_after_five">Free After 5</string>
    <string name="checkbox_nearest_parking">Show Route to Nearest Parking</string>
    <string name="checkbox_three_nearest">3 Nearest Parking Areas</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_weather">Weather</string>
    <string name="parking_menu_title">Parking Menu</string>

</resources>
