<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLinear"
        android:elevation="4dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dialog_parking_title"
            android:id="@+id/title"
            android:background="@color/primary_dark"
            android:textSize="28sp"
            android:gravity="bottom"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/optionsRelative"
            android:background="@color/primary"
            android:padding="10dp">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parking_layers_title"
                android:id="@+id/parkingLayersTitle"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:singleLine="true"
                android:textSize="24sp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/horizontalRule"
                android:background="@color/accent"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/parkingLayersTitle"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_street_parking"
                android:id="@+id/cbStreets"
                android:onClick="onCheckBoxClicked"
                android:layout_below="@+id/parkingLayersTitle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_parking_lots"
                android:id="@+id/cbLots"
                android:layout_below="@+id/cbStreets"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:onClick="onCheckBoxClicked"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_free_after_five"
                android:id="@+id/cbFreeAfterFive"
                android:onClick="onCheckBoxClicked"
                android:layout_alignTop="@+id/cbStreets"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/cbStreets"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parking_directions_title"
                android:id="@+id/directionsTitle"
                android:layout_below="@+id/cbLots"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="24sp"
                android:layout_marginTop="10dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/horizontalRule2"
                android:background="@color/accent"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/directionsTitle"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_nearest_parking"
                android:id="@+id/cbNearest"
                android:layout_below="@+id/directionsTitle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:onClick="onCheckBoxClicked"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_three_nearest"
                android:id="@+id/cbThreeNearest"
                android:layout_below="@+id/cbNearest"
                android:layout_alignParentStart="true"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRelative"
            android:background="@color/primary_dark">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clear"
                android:id="@+id/parkingClearBtn"
                android:background="@drawable/alert_button"
                android:textColor="@color/accent"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OK"
                android:id="@+id/parkingOkBtn"
                android:background="@drawable/alert_button"
                android:textColor="@color/accent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"/>

    </RelativeLayout>
</LinearLayout>
