<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/placesItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardBackgroundColor="@color/my_brown">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/placeRelative">

        <com.codebyjordan.ancientcityapp.DynamicHeightImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/placeImage"
                android:contentDescription="@string/cd_place_image"
                android:layout_alignParentTop="true"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ph_place_name"
                android:id="@+id/nameText"
                android:textSize="18sp"
                android:layout_below="@+id/placeImage"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:id="@+id/imageView"
                android:layout_below="@+id/nameText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/item_icon_bars"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ph_place_phone"
                android:id="@+id/phoneText"
                android:layout_below="@+id/nameText"
                android:layout_toRightOf="@+id/imageView"
                android:layout_toEndOf="@+id/imageView"
                android:layout_marginLeft="10dp"
                android:textSize="12sp"/>

    </RelativeLayout>


</android.support.v7.widget.CardView>