<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/placesItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardBackgroundColor="@color/my_brown">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/placeRelative">

        <com.codebyjordan.ancientcityapp.custviews.DynamicHeightImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/placeImage"
                android:contentDescription="@string/cd_place_image"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menuDots"
                android:src="@drawable/ic_more_vert_white_24dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ph_place_name"
                android:id="@+id/nameText"
                android:textSize="18sp"
                android:layout_alignParentStart="false"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/placeImage"
                android:layout_below="@+id/menuDots"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/horizontalRule"
                android:background="@color/accent"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/nameText"
                android:layout_toRightOf="@+id/placeImage"/>

        <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tableLayout"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_below="@+id/horizontalRule"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignLeft="@+id/nameText"
                android:layout_alignStart="@+id/nameText">

            <TableRow android:id="@+id/rowPhone"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                    >
                <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:id="@+id/phoneIcon"
                        android:src="@drawable/placescard_phone"
                        android:layout_marginBottom="10dp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ph_place_phone"
                        android:id="@+id/phoneText"
                        android:layout_marginLeft="5dp"
                        android:textSize="16sp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center_vertical"/>
            </TableRow>

            <TableRow android:id="@+id/rowHours"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">
                <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:id="@+id/hoursIcon"
                        android:src="@drawable/placescard_time"
                        android:layout_marginBottom="10dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ph_place_hours"
                        android:id="@+id/hoursText"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:textSize="16sp"/>
            </TableRow>

            <TableRow android:id="@+id/rowAddress"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                    >
                <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:id="@+id/addressIcon"
                        android:src="@drawable/placescard_map"
                        android:layout_marginBottom="10dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ph_place_address"
                        android:id="@+id/addressText"
                        android:layout_marginLeft="5dp"
                        android:textSize="16sp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="10dp"/>
            </TableRow>

        </TableLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>